--- a/css/app.css
+++ b/css/app.css
@@ -30,10 +30,10 @@ h3 {
 	line-height: 1.5em
 }
 body {
-
 	position: relative;
 	background-image: url('../img/background-img.jpg');
 	background-size: cover;
+	background-position: top center;
 	background-repeat: no-repeat;
 	font-family: 'Quicksand', sans-serif;
 	color: white;
@@ -42,11 +42,7 @@ body {
 	padding: 50px;
 }
 .page-wrap {
-	//position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	min-height: 100vh;
 	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.75) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -66,6 +62,7 @@ body {
 }
 .signature img {
 	display: inline-block;
+	width: 250px;
 	padding: 5px;
 }
 .row .columns:first-of-type {
@@ -128,6 +125,7 @@ body {
 
 footer {
 	font-family: 'Quicksand', sans-serif;
+	font-weight: 500;
 	display: block;
 	position: fixed;
 	color: white;
