--- a/css/form.css
+++ b/css/form.css
@@ -26,6 +26,30 @@
 @font-face {
   font-family: 'Quicksand';
   font-style: normal;
+  font-weight: 500;
+  src: local('Quicksand Medium'), local('Quicksand-Medium'), url(https://fonts.gstatic.com/s/quicksand/v6/FRGja7LlrG1Mypm0hCq0DvgrLsWo7Jk1KvZser0olKY.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Quicksand Medium'), local('Quicksand-Medium'), url(https://fonts.gstatic.com/s/quicksand/v6/FRGja7LlrG1Mypm0hCq0DojoYw3YTyktCCer_ilOlhE.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Quicksand';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Quicksand Medium'), local('Quicksand-Medium'), url(https://fonts.gstatic.com/s/quicksand/v6/FRGja7LlrG1Mypm0hCq0Dhampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Quicksand';
+  font-style: normal;
   font-weight: 700;
   src: local('Quicksand Bold'), local('Quicksand-Bold'), url(https://fonts.gstatic.com/s/quicksand/v6/32nyIRHyCu6iqEka_hbKsvgrLsWo7Jk1KvZser0olKY.woff2) format('woff2');
   unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
@@ -48,8 +72,10 @@
 }
 
 
+
 body,.wufoo,.wufoo label.desc,.wufoo legend.desc,.wufoo .info h2,.wufoo .info div,.wufoo input.text,.wufoo textarea.textarea,.wufoo input.file,.wufoo li div,.wufoo li span,.wufoo li div label,.wufoo li span label,.likert caption,.likert thead td,.likert tbody th label,.wufoo .section h3,.wufoo .section div,.paging-context{
-	font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family:'Quicksand', Helvetica, Arial, sans-serif;
+	font-weight: 500;
 	color:#333
 }
 #logo {
@@ -71,18 +97,21 @@ form li div label,form li span label,.likert caption,.likert tbody th label,.lik
 	line-height:30px
 }
 .wufoo label.desc,.wufoo legend.desc,.likert caption,.wufoo .section h3 {
-	line-height:1.42857143;color:#333;font-weight:bold;font-size:120%
+	line-height:1.42857143;
+	color:#333;
+	font-weight:bold;
+	font-size:120%
 }
 .wufoo input.text,.wufoo textarea.textarea,.wufoo select.select,form li.complex div span.full input {
-	width:80%;
+	width:100%;
 	height:36px;
 	padding:3px 9px;
 	line-height:1.42857143;
 	color:#555555;
 	background-color:#ffffff;
 	background-image:none;
-	border:1px solid #cccccc;
-	border-radius:4px;
+	border:2px solid #DEDCDC;
+	//border-radius:4px;
 	box-shadow:inset 0 1px 1px rgba(0,0,0,0.075)
 }
 form li.complex div span.left,form li.complex div span.right {
@@ -118,10 +147,11 @@ span.symbol {
 	background:none
 }
 #saveForm,input.btTxt {
+	width: 160px;
 	cursor:pointer;
 	border:1px solid #3498db;
 	white-space:nowrap;
-	padding:6px 12px;
+	//padding:6px 12px;
 	font-size:16px;
 	line-height:1.42857143;
 	border-radius:4px;
@@ -129,7 +159,7 @@ span.symbol {
 	-moz-user-select:none;
 	box-shadow:none;
 	color:#ffffff;
-	background-color:#3498db
+	//background-color:#3498db
 }
 button.link {
 	text-decoration:none;
