wufoo stylesheet update

--- a/css/form.css
+++ b/css/form.css
@@ -117,7 +117,7 @@ form li div label,form li span label,.likert caption,.likert tbody th label,.lik
 	//border-radius:4px;
 	box-shadow:inset 0 1px 1px rgba(0,0,0,0.075)
 }
-.desc {
+.desc-hide .desc {
 	display:none;
 }
 form li.complex div span.left,form li.complex div span.right {
@@ -324,8 +324,8 @@ form li.time select.select {
 	margin-right:10px
 }
 li.buttons {
-	text-align: center;
+	text-align: right;
 }
-li.buttons a[style] {
-	display:none !important;
+li.buttons a {
+	opacity: 0;
 }
