--- a/css/form.css
+++ b/css/form.css
@@ -159,7 +159,7 @@ span.symbol {
 #saveForm,input.btTxt {
 	width: 160px;
 	cursor:pointer;
-	border:1px solid #3498db;
+	//border:1px solid #3498db;
 	white-space:nowrap;
 	//padding:6px 12px;
 	font-size:16px;
@@ -329,6 +329,7 @@ form li.time select.select {
 }
 li.buttons {
 	text-align: right;
+	height: 45px;
 }
 li.buttons a {
 	opacity: 0;
