--- a/css/app.css
+++ b/css/app.css
@@ -118,6 +118,10 @@ body {
     -ms-flex-item-align: center;
     align-self: center;
 }
+.challenge .challenge-title {
+	width: 100%;
+	clear: both;
+}
 .challenge h2 {
 	//display: block;
 	-webkit-order: 0;
@@ -204,9 +208,6 @@ footer a {
 	}
 	.row .columns:first-of-type {
 		padding-left: 15px;
-	}
-	h1 span {
-		display: block;
 	}
 }
 @media screen and (max-width: 640px) {
